--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/matrix-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ff6647" />
+    <meta name="theme-color" content="#000000" />
     <meta name="description" content="HCMatrix" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/matrix-logo.png" />
 
