--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,45 @@
       rel="stylesheet"
     />
 
+    <!-- Whatsapp link -->
+    <script>
+      var url =
+        "https://wati-integration-service.clare.ai/ShopifyWidget/shopifyWidget.js?25282";
+      var s = document.createElement("script");
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = url;
+      var options = {
+        enabled: true,
+        chatButtonSetting: {
+          backgroundColor: "#4dc247",
+          ctaText: "",
+          borderRadius: "25",
+          marginLeft: "0",
+          marginBottom: "30",
+          marginRight: "15",
+          position: "right",
+        },
+        brandSetting: {
+          brandName: "Basil HCMatrix",
+          brandSubTitle: "We are always online",
+          brandImg: "matrix-logo.png",
+          welcomeText: "Hi, there!\nHow can we help you?",
+          messageText: "Hello, I have a question about {{page_link}}",
+          backgroundColor: "#0a5f54",
+          ctaText: "Start Chat",
+          borderRadius: "25",
+          autoShow: false,
+          phoneNumber: "+1 (254) 244-0305",
+        },
+      };
+      s.onload = function () {
+        CreateWhatsappChatWidget(options);
+      };
+      var x = document.getElementsByTagName("script")[0];
+      x.parentNode.insertBefore(s, x);
+    </script>
+
     <title>HCMatrix</title>
   </head>
   <body>
