--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
           brandSubTitle: "We are always online",
           brandImg: "matrix-logo.png",
           welcomeText: "Hi, there!\nHow can we help you?",
-          messageText: "Hello, I have a question about {{page_link}}",
+          messageText: "Hello, I need a support on {{page_link}}",
           backgroundColor: "#0a5f54",
           ctaText: "Start Chat",
           borderRadius: "25",
