--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/matrix-logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/matrix_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="HCMatrix" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/matrix-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/matrix_logo.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -45,7 +45,7 @@
         brandSetting: {
           brandName: "Basil HCMatrix",
           brandSubTitle: "We are always online",
-          brandImg: "matrix-logo.png",
+          brandImg: "matrix_logo.png",
           welcomeText: "Hi, there!\nHow can we help you?",
           messageText: "Hello, I need a support on {{page_link}}",
           backgroundColor: "#0a5f54",
