chore: updates all recent bugs

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,17 @@
       x.parentNode.insertBefore(s, x);
     </script>
 
+    <!-- flag css -->
+    <script src="
+https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.7/svgo.config.min.js
+"></script>
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.7/css/flag-icons.min.css
+"
+      rel="stylesheet"
+    />
+
     <title>HCMatrix</title>
   </head>
   <body>
